--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
+    "swr": "^2.3.3",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
