--- a/site-settings.json
+++ b/site-settings.json
@@ -82,7 +82,7 @@
 		}
 	},
 	"site_footer": {
-		"all_rights_reserved_text": "© 2024 BooliiTheme Company, Inc. All rights reserved."
+		"all_rights_reserved_text": "© 2025 OffBeat Radio. Made with 🎧 for artists and music lovers."
 	},
 	"single_page": {
 		"show_view_cout": true,
